--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "email-templates": "^8.0.7",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "ldapjs": "^2.2.4",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
