--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "node-stl": "^0.7.2",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "three": "^0.128.0"
   }
 }
