--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hanna-claire-flores/api-spark-orders.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hanna-claire-flores/api-spark-orders/issues"
-  },
-  "homepage": "https://github.com/hanna-claire-flores/api-spark-orders#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "email-templates": "^8.0.7",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "gridfs-stream": "^1.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "ldapjs": "^2.2.4",
-    "mongoose": "^5.12.5",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0",
-    "node-stl": "^0.7.2",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0",
-    "three": "^0.128.0"
-  }
+    "name": "api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/hanna-claire-flores/api-spark-orders.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hanna-claire-flores/api-spark-orders/issues"
+    },
+    "homepage": "https://github.com/hanna-claire-flores/api-spark-orders#readme",
+    "dependencies": {
+        "@prettier/plugin-pug": "^1.15.3",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
+        "email-templates": "^8.0.7",
+        "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "gridfs-stream": "^1.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "ldapjs": "^2.2.4",
+        "mongoose": "^5.12.5",
+        "multer": "^1.4.2",
+        "multer-gridfs-storage": "^5.0.0",
+        "node-stl": "^0.7.2",
+        "nodemon": "^2.0.7",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "pug": "^3.0.2",
+        "puppeteer": "^10.0.0",
+        "serve-favicon": "^2.5.0",
+        "three": "^0.129.0",
+        "ws": "^7.4.6"
+    }
 }
