--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express-jwt": "^6.0.0",
         "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
+        "jszip": "^3.6.0",
         "ldapjs": "^2.2.4",
         "mongoose": "^5.12.5",
         "multer": "^1.4.2",
