--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "email-templates": "^8.0.7",
+        "exceljs": "^4.2.1",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
         "gridfs-stream": "^1.1.1",
