--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "puppeteer": "^10.0.0",
         "serve-favicon": "^2.5.0",
         "three": "^0.129.0",
+        "winston": "^3.3.3",
+        "winston-timestamp-colorize": "^1.1.0",
         "ws": "^7.4.6"
     }
 }
